css: fix text wrap on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -65,13 +65,15 @@ a:hover {
     position: relative;
     left: 200px;
     font-size: 13px;
-    max-width: 75%;
+    width: 220%;
 }
 
+/* Desktop */
 @media (min-width: 600px) {
     .div-about {
         left: 300px;
         font-size: 17px;
+        max-width: 75%;
     }
 }
 
